[Issue #62] - upgrade to junit5